...
            android:text="NOVO FUNCIONÁRIO"
            android:textColor="@color/colordarkred"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/novo_funcionario_nome_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="44dp"
            android:ems="5"
            android:hint="Nome"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_sobrenome_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="74dp"
            android:ems="10"
            android:hint="Sobrenome"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_cpf_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginLeft="20dp"
...
            android:ems="10"
            android:hint="CPF"
            android:inputType="numberDecimal"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_cargo_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignEnd="@+id/editText8"
            android:layout_alignRight="@+id/editText8"
...
            android:hint="Cargo"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_email_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText4"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="164dp"
            android:layout_toEndOf="@+id/textView13"
...
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_telefone_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText8"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="194dp"
            android:layout_toEndOf="@+id/textView14"
...
            android:hint="Telefone"
            android:inputType="phone"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/novo_funcionario_rua_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignEnd="@+id/editText8"
            android:layout_alignRight="@+id/editText8"
...
            android:ems="10"
            android:hint="Rua"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_numero_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignEnd="@+id/editText8"
            android:layout_alignRight="@+id/editText8"
...
            android:ems="10"
            android:hint="Numero"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_bairro_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignEnd="@+id/editText8"
            android:layout_alignRight="@+id/editText8"
...
            android:ems="10"
            android:hint="Bairro"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_cep_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignEnd="@+id/editText8"
            android:layout_alignRight="@+id/editText8"
...
            android:ems="10"
            android:hint="CEP"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_cidade_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignEnd="@+id/editText8"
            android:layout_alignRight="@+id/editText8"
...
            android:ems="10"
            android:hint="Cidade"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_funcionario_estado_input"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignEnd="@+id/editText8"
            android:layout_alignRight="@+id/editText8"
...
            android:textColorHint="@color/colorPrimary" />

        <Button
            android:id="@+id/novo_funcionario_cancelar_button"
            android:layout_width="135dp"
            android:layout_height="55dp"
            android:layout_alignBaseline="@+id/novo_funcionario_concluir_button"
            android:layout_alignBottom="@+id/novo_funcionario_concluir_button"
            android:layout_alignEnd="@+id/novo_funcionario_sobrenome_input"
            android:layout_marginEnd="31dp"
            android:background="@color/colorSalmao"
            android:text="CANCELAR"
            android:textColor="@color/colorWhite"
...
            android:layout_height="55dp"

            android:layout_alignStart="@+id/novo_funcionario_estado_input"
            android:layout_below="@+id/novo_funcionario_estado_input"
            android:layout_marginTop="14dp"
            android:background="@color/colorSalmao"
            android:text="CONCLUIR"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />


    </RelativeLayout>
</LinearLayout>
