...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorQuaseBranco">

        <ImageButton
            android:id="@+id/listar_funcionarios_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/listarFuncionarios"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="57dp"
...
            android:textColor="@color/colordarkred"
            android:textStyle="bold" />

        <ListView
            android:layout_marginTop="150dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/listar_funcionarios_lista"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

        <TextView
...
