...
            android:layout_marginTop="240dp"
            android:layout_marginLeft="130dp"
            android:text="CONTRATOS"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/funcionarios_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@color/colorSalmao"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="130dp"
            android:text="FUNCIONÁRIOS"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/qr_code_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
...
